<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:id="@+id/menu_upper" android:checkableBehavior="single">
		<item
			android:id="@+id/nav_public_poll"
			android:icon="@drawable/ic_poll"
			android:title="@string/nav_public_poll"/>

		<item
			android:id="@+id/nav_history"
			android:icon="@drawable/ic_history"
			android:title="@string/nav_history"/>

		<item
			android:id="@+id/nav_question_set"
			android:icon="@drawable/ic_question"
			android:title="@string/nav_question_set"/>
	</group>

	<group android:id="@+id/menu_lower" android:checkableBehavior="single">

		<item
			android:id="@+id/nav_feedback"
			android:icon="@drawable/ic_feedback"
			android:title="@string/nav_feedback"/>

		<item
			android:id="@+id/nav_logout"
			android:icon="@drawable/ic_logout"
			android:title="@string/nav_logout"/>
	</group>
</menu>
