<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="0.8"
	            android:descendantFocusability="beforeDescendants"
	            android:focusableInTouchMode="true"
	            android:overScrollMode="never">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:focusableInTouchMode="true"
			android:orientation="vertical"
			android:overScrollMode="never"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingTop="@dimen/activity_vertical_margin">

			<TextView
				android:id="@+id/input_question_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="@dimen/create_set_item_margin"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textStyle="bold"/>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/wrapper_create_question_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/create_set_item_margin"
				android:layout_marginTop="@dimen/create_set_item_margin">

				<EditText
					android:id="@+id/input_create_question_text"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/create_question_text"
					android:inputType="textMultiLine"
					android:maxLines="3"/>
			</android.support.design.widget.TextInputLayout>

			<TextView
				android:id="@+id/item_name"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:paddingTop="15dp"
				android:text="@string/create_question_choice"
				android:textAppearance="?android:attr/textAppearanceSmall"/>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginBottom="10dp"
				android:background="@android:color/darker_gray"
				android:paddingStart="0dp"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingLeft="5dp"
				android:paddingRight="5dp">

				<android.support.design.widget.TextInputLayout
					android:id="@+id/wrapper_create_question_choice1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/create_set_item_margin"
					android:layout_marginTop="@dimen/create_set_item_margin">

					<EditText
						android:id="@+id/input_create_question_choice1"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/create_question_choice1"
						android:inputType="textAutoCorrect"
						android:maxLines="3"
						android:singleLine="true"/>
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/wrapper_create_question_choice2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/create_set_item_margin"
					android:layout_marginTop="@dimen/create_set_item_margin">

					<EditText
						android:id="@+id/input_create_question_choice2"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/create_question_choice2"
						android:inputType="textAutoCorrect"
						android:maxLines="3"
						android:singleLine="true"/>
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/wrapper_create_question_choice3"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/create_set_item_margin"
					android:layout_marginTop="@dimen/create_set_item_margin">

					<EditText
						android:id="@+id/input_create_question_choice3"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/create_question_choice3"
						android:inputType="textAutoCorrect"
						android:maxLines="3"
						android:singleLine="true"/>
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/wrapper_create_question_choice4"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/create_set_item_margin"
					android:layout_marginTop="@dimen/create_set_item_margin">

					<EditText
						android:id="@+id/input_create_question_choice4"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/create_question_choice4"
						android:inputType="textAutoCorrect"
						android:maxLines="3"
						android:singleLine="true"/>
				</android.support.design.widget.TextInputLayout>

			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:layout_marginBottom="10dp"
	              android:layout_marginTop="10dp"
	              android:orientation="horizontal">
		<android.support.v7.widget.AppCompatButton
			android:id="@+id/add_question_btn"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginRight="10dp"
			android:layout_weight="0.5"
			android:padding="12dp"
			android:text="@string/add_question"/>

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/save_set_btn"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginLeft="10dp"
			android:layout_weight="0.5"
			android:padding="12dp"
			android:text="@string/save_set"/>
	</LinearLayout>
</LinearLayout>