<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:overScrollMode="never">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:focusableInTouchMode="true"
		android:orientation="vertical"
		android:overScrollMode="never"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:weightSum="1">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/wrapper_create_room_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/create_room_item_margin"
			android:layout_marginTop="@dimen/create_room_item_margin">

			<EditText
				android:id="@+id/input_create_room_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/create_room_name"
				android:inputType="textAutoCorrect"
				android:maxLines="1"
				android:singleLine="true"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/wrapper_create_room_desc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/create_room_item_margin"
			android:layout_marginTop="@dimen/create_room_item_margin">

			<EditText
				android:id="@+id/input_create_room_desc"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/create_room_desc"
				android:inputType="textMultiLine"
				android:maxLines="10"
				android:singleLine="true"/>
		</android.support.design.widget.TextInputLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginBottom="2dp"
			android:layout_marginTop="20dp"
			android:paddingStart="2dp"
			android:text="@string/create_room_question_set"/>

		<Spinner
			android:id="@+id/input_create_room_set"
			style="@style/Widget.AppCompat.Spinner.Underlined"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:drawSelectorOnTop="true"
			android:padding="2dp"
			android:paddingBottom="8dp"
			android:spinnerMode="dialog"
		/>

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/create_room_btn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="24dp"
			android:layout_marginTop="24dp"
			android:padding="12dp"
			android:text="@string/create_room_btn"/>
	</LinearLayout>
</ScrollView>
